# OICQv2

./: CMakeLists.txt
docs/: api.txt
file_db/: chat_history.json  user_info.json
lib/basic_info/: basic_definition.h
lib/common_tools/: common_tools.h
lib/file_db_operate/: operate_chat_history.h  operate_user_info.h
lib/shared_memory_dir/: shared_memory.c  shared_memory.h
lib/socket_client/: auto_client_transfer.h  client_response_main_function.h  client_sender_receiver_function.h  client_socket_sender.h  display_function.h
lib/socket_server/: auto_server_transfer.h  server_basic_socket_sender.h  server_response_main_function.h  server_sender_function.h  server_socket_handler.h  server_socket_sender.h  server_socket_single_broadcast.h
lib/socket_tools/: basic_struct_transfer.h  server_json_response.h  struct_json_transfer.h
src/: client.c  server.c  test.c
